[project]
name = "polygon_wrapper"
version = "0.1"
dependencies = ["boto3", "polars", "dateparser", "pandas"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
polygon_download = "cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = [ "." ]

[tool.black]
line-length = 100
